# Sashiki

./: Cargo.toml  README.md
src/: app.rs  git.rs  main.rs  session.rs  template.rs  theme.rs
src/action/: mod.rs
src/app/: actions.rs  dialogs.rs  file_ops.rs  keyboard.rs  message.rs  mod.rs
src/app/views/: dialogs.rs  file_list.rs  main_content.rs  mod.rs  sidebar.rs  split.rs  status_bar.rs  terminal.rs  terminal_widget.rs
src/buffer/: mod.rs
src/config/: mod.rs
src/dialog/: mod.rs
src/diff/: mod.rs
src/font/: mod.rs
src/git/: mod.rs
src/session/: mod.rs
src/terminal/: element.rs  keybindings.rs  mod.rs  state.rs  view.rs
src/ui/: dialogs.rs  diff_view.rs  file_list.rs  file_tree.rs  file_view.rs  markdown_editor.rs  mod.rs  render.rs  sidebar.rs  terminal.rs  terminal_view.rs  text_view.rs
