[package]
name = "sashiki"
version = "0.1.0"
edition = "2024"
description = "Sashiki - Terminals for each worktree. All in one place."
license = "MIT"

[dependencies]
# GPU-accelerated UI Framework (from Zed git - includes IME fixes)
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Terminal emulation
alacritty_terminal = "0.25.1"

# Git operations
git2 = "0.20.3"

# Async runtime
smol = "2.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# URL detection and opening
regex = "1"
open = "5"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
